--- a/MAKEFILES/Makefile.stable
+++ b/MAKEFILES/Makefile.stable
@@ -1,4 +1,4 @@
-#$Id: Makefile.stable,v 1.2 2001-03-05 13:58:27 gotm Exp $
+#$Id: Makefile.stable,v 1.3 2001-03-05 15:02:08 gotm Exp $
 #
 # Master Makefile for making the GOTM executable.
 #
@@ -28,11 +28,10 @@ libobservations.a(observations.o)	\
 libairsea.a(airsea.o)			\
 libmeanflow.a(meanflow.o)		\
 libturbulence.a(turbulence.o)		\
-libturbulence.a(sediment.o)		\
-libturbulence.a(seagrass.o)		\
 liboutput.a(asciiout.o)			\
-liboutput.a(gradsout.o)			\
 liboutput.a(output.o)			\
+libturbulence.a(sediment.o)		\
+libturbulence.a(seagrass.o)
 
 UTIL	= \
 libutil.a(advection.o)		\
