--- a/MAKEFILES/Makefile.stable_netcdf
+++ b/MAKEFILES/Makefile.stable_netcdf
@@ -1,4 +1,4 @@
-#$Id: Makefile.stable_netcdf,v 1.3 2001-03-05 15:02:08 gotm Exp $
+#$Id: Makefile.stable_netcdf,v 1.4 2001-11-22 19:33:44 gotm Exp $
 #
 # Master Makefile for making the GOTM executable.
 #
@@ -22,7 +22,7 @@ FC     = f95
 FFLAGS = -Am -fw -I$(NETCDFINCDIR)
 
 #DECFOR F95 compiler for OSF1 - alpha
-#FC=    = f95
+#FC    = f95
 #FFLAGS = -I$(NETCDFINCDIR)
 
 MODULES	= \
@@ -63,6 +63,7 @@ libmeanflow.a(convectiveadjustment.o)
 TURBULENCE   = \
 libturbulence.a(tkeeq.o)		\
 libturbulence.a(tkealgebraic.o)		\
+libturbulence.a(genericeq.o)		\
 libturbulence.a(algebraiclength.o)	\
 libturbulence.a(dissipationeq.o)	\
 libturbulence.a(lengthscaleeq.o)	\
