--- a/MAKEFILES/Makefile.stable
+++ b/MAKEFILES/Makefile.stable
@@ -1,4 +1,4 @@
-#$Id: Makefile.stable,v 1.6 2003-03-10 10:10:13 gotm Exp $
+#$Id: Makefile.stable,v 1.7 2003-03-28 09:27:56 kbk Exp $
 #
 # Master Makefile for making the GOTM executable.
 #
@@ -13,12 +13,16 @@ SHELL	= /bin/sh
 #FFLAGS = -f77
 
 #Fujitsu F95 compiler for Linux
-FC     = f95
-FFLAGS = -Am -fw
+#FC     = f95
+#FFLAGS = -Am -fw
 
 #DECFOR F95 compiler for OSF1 - alpha
 #FC    = f95
 #FFLAGS =
+
+#Intel Fortran  compiler for
+FC    = ifc
+FFLAGS =
 
 MODULES	= \
 libutil.a(time.o)			\
