removed unused files

--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -1,4 +1,4 @@
-#$Id: Makefile,v 1.5 2004-01-12 08:53:03 lars Exp $
+#$Id: Makefile,v 1.6 2004-01-13 08:29:13 lars Exp $
 #
 # Makefile to build the the Util library - libutil.a
 #
@@ -7,7 +7,7 @@ include ../Rules.make
 
 LIB	= $(LIBDIR)/libutil$(buildtype).a
 
-DOCSRC	=  diffusion.F90 advection.F90 yevol.F90 w_split_it_adv.F90  \
+DOCSRC	=  diffusionMean.F90 advectionMean.F90 yevol.F90 w_split_it_adv.F90  \
            tridiagonal.F90 eqstate.F90  gridinterpol.F90  time.F90
 
 
@@ -20,15 +20,15 @@ OBJ   = \
 ${LIB}(gridinterpol.o)		\
 ${LIB}(w_split_it_adv.o)	\
 ${LIB}(yevol.o)	                \
-${LIB}(diffusion.o)             \
-${LIB}(advection.o)
+${LIB}(diffusionMean.o)             \
+${LIB}(advectionMean.o)
 
 all: $(MOD) $(OBJ)
 	$(MOVE_MODULES_COMMAND)
 
 ${LIB}(yevol.o): ${LIB}(tridiagonal.o)  ${LIB}(w_split_it_adv.o)
 
-${LIB}(diffusion.o): ${LIB}(tridiagonal.o) 
+${LIB}(diffusionMean.o): ${LIB}(tridiagonal.o) 
 
 doc:    $(DOCSRC)
 	$(PROTEX) $(DOCSRC) > ../../doc/util.tex 
