--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,4 +1,4 @@
-#$Id: Makefile,v 1.8 2004-01-12 08:54:05 lars Exp $
+#$Id: Makefile,v 1.9 2005-07-06 14:11:27 kbk Exp $
 #
 # Makefile for making the source code documentation. 
 #
@@ -14,9 +14,9 @@ PROTEXSRC  = gotm.tex              \
              observations.tex      \
              output.tex            \
              util.tex              \
-             sediment.tex          \
+#             sediment.tex          \
              seagrass.tex          \
-             bio.tex
+#             bio.tex
 
 TEXSRC     = introduction.tex      \
              mainIntro.tex         \
@@ -56,82 +56,83 @@ all:         a4_pdf letter_pdf html_pdf html
 
 
 # do the pdf-versions
-a4_pdf:      protex code_a4.pdf
+a4_pdf:      protex a4.pdf
 
-letter_pdf:  protex code_letter.pdf
+letter_pdf:  protex letter.pdf
 
-html_pdf:    protex code_html.pdf
+html_pdf:    protex html.pdf
 
 # do the postscript-versions
-a4_ps:       protex code_a4.ps
+a4_ps:       protex a4.ps
 
-letter_ps:   protex code_letter.ps
+letter_ps:   protex letter.ps
 
-html_ps:     protex code_html.ps
+html_ps:     protex html.ps
 
 # do the dvi-versions
-a4_dvi:      protex code_a4.dvi
+a4_dvi:      protex a4.dvi
 
-letter_dvi:  protex code_letter.dvi
+letter_dvi:  protex letter.dvi
 
-html_dvi:    protex code_html.dvi
+html_dvi:    protex html.dvi
 
 # do the web-version
 html_web:    protex html
 
 
 protex:
-	$(MAKE) doc -C $(SRCDIR)
+	$(MAKE) realclean -C $(SRCDIR)
+	$(MAKE) doc       -C $(SRCDIR)
 
-code_a4.dvi: code_a4.tex  $(TEXSRC) $(PROTEXSRC) figures
-	latex code_a4.tex
-	bibtex code_a4
-	latex code_a4.tex
-	latex code_a4.tex
-	latex code_a4.tex
+a4.dvi: a4.tex  $(TEXSRC) $(PROTEXSRC) figures
+	latex  a4.tex
+	bibtex a4
+	latex  a4.tex
+	latex  a4.tex
+	latex  a4.tex
 
-code_letter.dvi: code_letter.tex $(TEXSRC) $(PROTEXSRC) figures
-	latex code_letter.tex
-	bibtex code_letter
-	latex code_letter.tex
-	latex code_letter.tex
-	latex code_letter.tex
+letter.dvi: letter.tex $(TEXSRC) $(PROTEXSRC) figures
+	latex  letter.tex
+	bibtex letter
+	latex  letter.tex
+	latex  letter.tex
+	latex  letter.tex
 
-code_html.dvi: code_html.tex $(TEXSRC) $(PROTEXSRC) figures
-	latex code_html.tex
-	bibtex code_html
-	latex code_html.tex
-	latex code_html.tex
-	latex code_html.tex
+html.dvi: html.tex $(TEXSRC) $(PROTEXSRC) figures
+	latex  html.tex
+	bibtex html
+	latex  html.tex
+	latex  html.tex
+	latex  html.tex
 
-code_a4.ps: code_a4.dvi
-	dvips -o $@ code_a4.dvi
+a4.ps: a4.dvi
+	dvips -o $@ a4.dvi
 
-code_letter.ps: code_letter.dvi
-	dvips -o $@ code_letter.dvi
+letter.ps: letter.dvi
+	dvips -o $@ letter.dvi
 
-code_html.ps: code_html.dvi
-	dvips -o $@ code_html.dvi
+html.ps: html.dvi
+	dvips -o $@ html.dvi
 
-code_a4.pdf: code_a4.ps
-	ps2pdf code_a4.ps
+a4.pdf: a4.ps
+	ps2pdf a4.ps
 
-code_letter.pdf: code_letter.ps
-	ps2pdf code_letter.ps
+letter.pdf: letter.ps
+	ps2pdf letter.ps
 
-code_html.pdf: code_html.ps
-	ps2pdf code_html.ps
+html.pdf: html.ps
+	ps2pdf html.ps
 
-html:   code_html.tex
-	latex2html code_html.tex
+html:   html.dvi
+	latex2html html.tex
 	touch html
 
-pdf_scp: code_a4.pdf code_letter.pdf
-	scp -r code_a4.pdf code_letter.pdf gotm@80.198.12.199:doc/
+pdf_scp: a4.pdf letter.pdf
+	scp -r a4.pdf letter.pdf gotm@80.198.12.199:doc/
 	touch pdf_scp
 
 html_scp: html
-	scp -r code_html/* gotm@80.198.12.199:code_html/
+	scp -r html/* gotm@80.198.12.199:html/
 	touch html_scp
 
 
@@ -145,11 +146,11 @@ clean:
 
 realclean: clean
 	$(RM) *.dvi *.ps *.pdf
-	$(RM) -r code_html/
-	$(RM) -r $(PROTEXSRC)
+	$(RM) -rf html/
+	$(RM) -rf $(PROTEXSRC)
 
 distclean: realclean
 	$(RM) *.gz *.zip *.Z
 	$(RM) html html_scp pdf_scp
-	$(RM) -r figures
+	$(RM) -rf figures
 
