initial commit of Lennarts code

--- a/src/meanflow/Makefile
+++ b/src/meanflow/Makefile
@@ -16,6 +16,7 @@ vequation.F90		\
 extpressure.F90		\
 intpressure.F90		\
 friction.F90		\
+friction_lake.F90	\
 temperature.F90		\
 salinity.F90		\
 buoyancy.F90		\
@@ -34,6 +35,7 @@ ${LIB}(vequation.o)		\
 ${LIB}(extpressure.o)		\
 ${LIB}(intpressure.o)		\
 ${LIB}(friction.o)		\
+${LIB}(friction_lake.o)		\
 ${LIB}(temperature.o)		\
 ${LIB}(salinity.o)		\
 ${LIB}(stratification.o)	\
