--- a/src/meanflow/Makefile
+++ b/src/meanflow/Makefile
@@ -9,7 +9,8 @@ LIB	= $(LIBDIR)/libmeanflow$(buildtype).a
 
 DOCSRC	= \
 meanflow.F90		\
-hypsography.F90         \
+inflows.F90         \
+hypsography.F90     \
 updategrid.F90		\
 coriolis.F90		\
 uequation.F90		\
@@ -26,7 +27,8 @@ convectiveadjustment.F90
 
 MOD	= \
 ${LIB}(meanflow.o)     \
-${LIB}(hypsography.o)
+${LIB}(hypsography.o)  \
+${LIB}(inflows.o)
 
 OBJ   = \
 ${LIB}(updategrid.o)		\
