some undos due to restructerung the code

--- a/src/meanflow/Makefile
+++ b/src/meanflow/Makefile
@@ -9,7 +9,6 @@ LIB	= $(LIBDIR)/libmeanflow$(buildtype).a
 
 DOCSRC	= \
 meanflow.F90		\
-inflows.F90         \
 hypsography.F90     \
 updategrid.F90		\
 coriolis.F90		\
@@ -27,8 +26,7 @@ convectiveadjustment.F90
 
 MOD	= \
 ${LIB}(meanflow.o)     \
-${LIB}(hypsography.o)  \
-${LIB}(inflows.o)
+${LIB}(hypsography.o)
 
 OBJ   = \
 ${LIB}(updategrid.o)		\
