--- a/src/observations/Makefile
+++ b/src/observations/Makefile
@@ -8,7 +8,8 @@ include ../Rules.make
 LIB	= $(LIBDIR)/libobservations$(buildtype).a
 
 DOCSRC	= \
-observations.F90 	\
+observations.F90 	    \
+inflows.F90             \
 get_s_profile.F90       \
 get_t_profile.F90       \
 get_o2_profile.F90      \
@@ -26,7 +27,8 @@ const_NNS.F90
 
 
 MOD	= \
-${LIB}(observations.o)
+${LIB}(observations.o) \
+${LIB}(inflows.o)
 
 OBJ	= \
 ${LIB}(get_s_profile.o)		\
