code compiles, but still a lot of errors...

--- a/src/observations/Makefile
+++ b/src/observations/Makefile
@@ -8,8 +8,8 @@ include ../Rules.make
 LIB	= $(LIBDIR)/libobservations$(buildtype).a
 
 DOCSRC	= \
-observations.F90        \
 inflows.F90             \
+observations.F90        \
 get_s_profile.F90       \
 get_t_profile.F90       \
 get_o2_profile.F90      \
@@ -27,8 +27,8 @@ const_NNS.F90
 
 
 MOD	= \
-${LIB}(observations.o) \
-${LIB}(inflows.o)
+${LIB}(inflows.o) \
+${LIB}(observations.o)
 
 OBJ	= \
 ${LIB}(get_s_profile.o)		\
