replaced observation reading by calls to new input module

--- a/src/Makefile
+++ b/src/Makefile
@@ -67,7 +67,7 @@ $(SUBDIRS):
 
 observations airsea meanflow turbulence output input: util
 
-observations: input
+observations airsea: input
 
 features:
 ifdef FEATURES
